@@ -3,7 +3,7 @@ from pathlib import Path
 from typing import List
 
 from fastflix.models.encode import AttachmentTrack
-from fastflix.shared import unixy
+from fastflix.shared import clean_file_string
 
 
 def image_type(file: Path):
@@ -21,9 +21,9 @@ def build_attachments(attachments: List[AttachmentTrack]) -> str:
     for attachment in attachments:
         if attachment.attachment_type == "cover":
             mime_type, ext_type = image_type(attachment.file_path)
-            unixy_path = unixy(attachment.file_path)
+            clean_path = clean_file_string(attachment.file_path)
             commands.append(
-                f' -attach "{unixy_path}" -metadata:s:{attachment.outdex} mimetype="{mime_type}" '
+                f' -attach "{clean_path}" -metadata:s:{attachment.outdex} mimetype="{mime_type}" '
                 f'-metadata:s:{attachment.outdex}  filename="{attachment.filename}.{ext_type}" '
             )
     return " ".join(commands)
